force-app/main/default/objects/Achievement__mdt/Achievement__mdt.object-meta.xml
<CustomObject>
    <description>Achievement configuration</description>
    <label>Achievement</label>
    <pluralLabel>Achievements</pluralLabel>
</CustomObject>