force-app/main/default/objects/Achievement__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Short description for the achievement</description>
    <inlineHelpText>Short description used by admin users to better identify list of achievements</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>