force-app/main/default/objects/Achievement__mdt/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <description>Goal that has to be reached by user to get the achievement</description>
    <label>Goal</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>