force-app/main/default/objects/Achievement__mdt/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Number of points that user gets, once reaching the achievement. Used to calculate high-score on the leaderboard</description>
    <label>Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>