force-app/main/default/objects/Achievement__mdt/fields/UI_Description__c.field-meta.xml
<CustomField>
    <fullName>UI_Description__c</fullName>
    <description>Achievement description that is going to be shown in the UI elements</description>
    <inlineHelpText>Supports plain text, as well as reference to the Custom Labels API Name</inlineHelpText>
    <label>UI Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>